--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,19 +5,21 @@
     margin-right: -65px;
   }
 
+  &__gutters-large{
+    margin-right: -100px;
+  }
+
   &__gutters>div{
     padding-right: 65px;
     
   }
 
-  &__b-margin-until-medium{
-    margin-bottom: 1rem;
+  &__gutters-large>div{
+    padding-right: 100px;
   }
 
-  @mixin atMedium{
-    &__b-margin-until-medium{
-      margin-bottom: 0;
-    }
+  &__b-margin-until-medium{
+    margin-bottom: 1rem;
   }
   @mixin atMedium{
     &__medium-4{
@@ -29,6 +31,11 @@
       width: 37%;
     }
 
+    &__medium-6{
+      float: left;
+      width: 50%;
+    }
+
     &__medium-8{
       float: left;
       width: 66.66%;
@@ -36,6 +43,9 @@
 
     &__medium-8__smaller{
       width: 63%;
+    }
+    &__b-margin-until-medium{
+      margin-bottom: 0;
     }
   }
   
