--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -5,9 +5,29 @@
     padding: 4.5rem 0;
   }
   
+  &__no-b-padding-untill-medium{
+    padding-bottom: 0;
+    @mixin atMedium{
+      padding-botton: 4.5rem;
+    }
+  }
+  &__no-b-padding-untill-large{
+    padding-bottom: 0;
+    @mixin atLarge{
+      padding-botton: 4.5rem;
+    }
+  }
 
   &__blue{
     background-color: $mainBlue;
     color: #FFF;
+  }
+
+  &__testimonials {
+    background-color: #e0e6ef;
+    @mixin atLarge{
+      background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
   }
 }
