--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,12 +1,19 @@
 .row{
 @mixin clearfix;
 
+  &__t-padding{
+    padding-top: 80px;
+  }
+
   &__gutters{
     margin-right: -65px;
   }
 
   &__gutters-large{
     margin-right: -100px;
+  }
+  &__gutters-small{
+    margin-right: -45px;
   }
 
   &__gutters>div{
@@ -16,6 +23,9 @@
 
   &__gutters-large>div{
     padding-right: 100px;
+  }
+  &__gutters-small>div{
+    padding-right: 45px;
   }
 
   &__b-margin-until-medium{
@@ -48,6 +58,51 @@
       margin-bottom: 0;
     }
   }
-  
+  @mixin atLarge{
+    &__medium-4{
+      float: left;
+      width: 33.33%;
+    }
 
+    &__medium-4__larger{
+      width: 37%;
+    }
+
+    &__medium-6{
+      float: left;
+      width: 50%;
+    }
+
+    &__medium-8{
+      float: left;
+      width: 66.66%;
+    } 
+
+    &__medium-8__smaller{
+      width: 63%;
+    }
+    &__b-margin-until-medium{
+      margin-bottom: 0;
+    }
+  }
+  
+/* Begin Equal Height Rules */
+&__equal-height-at-medium{
+  @mixin atMedium {
+    display: flex;
+  }
+  & > div {
+    float: none;
+    display: flex;
+  }
+}
+&__equal-height-at-large{
+  @mixin atLarge {
+    display: flex;
+  }
+  & > div {
+    float: none;
+    display: flex;
+  }
+}
 }
