--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -59,29 +59,29 @@
     }
   }
   @mixin atLarge{
-    &__medium-4{
+    &__large-4{
       float: left;
       width: 33.33%;
     }
 
-    &__medium-4__larger{
+    &__larges-4__larger{
       width: 37%;
     }
 
-    &__medium-6{
+    &__large-6{
       float: left;
       width: 50%;
     }
 
-    &__medium-8{
+    &__large-8{
       float: left;
       width: 66.66%;
     } 
 
-    &__medium-8__smaller{
+    &__large-8__smaller{
       width: 63%;
     }
-    &__b-margin-until-medium{
+    &__b-margin-until-large{
       margin-bottom: 0;
     }
   }
