--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -87,7 +87,7 @@
   }
   
 /* Begin Equal Height Rules */
-&__equal-height-at-medium{
+.flexbox &__equal-height-at-medium{
   @mixin atMedium {
     display: flex;
   }
@@ -96,7 +96,7 @@
     display: flex;
   }
 }
-&__equal-height-at-large{
+.flexbox &__equal-height-at-large{
   @mixin atLarge {
     display: flex;
   }
